compiler/tests-spec/testData/psi/linked/constant-literals/integer-literals/long-integer-literals/p-1/pos/1.1.kt
/*
 KOTLIN PSI SPEC TEST (POSITIVE)

 SECTIONS: constant-literals, integer-literals, long-integer-literals
 PARAGRAPH: 1
 SENTENCE: [1] Any of the decimal, hexadecimal or binary literals may be suffixed by the long literal mark (symbol L).
 NUMBER: 1
 DESCRIPTION: Decimal integer literals suffixed by the long literal mark.
 */

val value = 1234567890L
val value = 23456789L
val value = 345678L
val value = 4567L
val value = 56L
val value = 65L
val value = 7654L
val value = 876543L
val value = 98765432L

val value = 0L
val value = 1L

val value = 100000L
val value = 1000001L

val value = 9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999L
